--- a/fontcss.html
+++ b/fontcss.html
@@ -513,6 +513,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend tag='mozilla' id="var" >zilla</legend>
             <div style="font-family:zilla;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend tag='' id="var" >ahrefs</legend>
+            <div style="font-family:ahrefs;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     
         <fieldset>
             <legend tag='' id="var" >inter</legend>
