--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/105/105113.png">
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <title>Lingyu Zhou</title>
 <style>
@@ -67,6 +68,7 @@
 h1,h2,h3,h4,h5{font-size:larger; font-weight: bold;}
 
 ul{ padding: 0 1em; } 
+
 a{
     color: inherit;
     transition: opacity .35s;
@@ -79,11 +81,15 @@ a:hover::after{
     font-family: inter;
 }
 
-a.reg:hover::after{ content: none; }
+a.noarr:hover::after{ content: none; }
+
+a.noul{text-decoration: none;}
 
 #pcMenu>a{ margin: 0 .5rem; }
 
 article{ margin: 2.5vh var(--hp); }
+
+article h1{transition: .3s;}
 
 /* article>h1{ text-decoration: underline; } */
 
@@ -302,13 +308,14 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     </div>
     <div id="pcMenu" style="max-width: 75%; overflow-x:auto; text-wrap: nowrap; margin: auto 0;">
         <!-- <a href="" id="contact">Contact</a> -->
-        <a href="https://xolyn.github.io/blog">Blog</a>
+        <a class="noul" href="https://xolyn.github.io/blog">Blog</a>
         <!-- <a href="https://xolyn.github.io/proj">Project</a> -->
-        <a href="https://portfolio.zhoulingyu.net">Portfolio</a>
-        <a href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
-        <a href="https://xolyn.github.io/fg2.html">Font Studio</a>
+        <a class="noul" href="https://portfolio.zhoulingyu.net">Portfolio</a>
+        <a class="noul" href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
+        <a class="noul" href="https://xolyn.github.io/fg2.html">Font Studio</a>
         <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
-        <a href="https://zly.vg/cv.pdf">Résumé</a>
+        <a class="noul" href="https://zly.vg/cv.pdf">Résumé</a>
+        <a style="font-family:'Bootstrap-icons';" href="javascript: themeTogg()" class="noarr noul">&#xF288;</a>
     </div>
 
     <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; padding: .3rem .5rem; transition: .3s;"
@@ -567,17 +574,17 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 </div>
 
 <div translate="no" style="display: flex; width: auto; height: fit-content; margin: 2.5vh var(--hp); box-sizing: border-box; perspective: 800px;">
-    <div class="chem" style="background-color: rgb(243,232,253);">
+    <div class="chem" style="background-color: rgb(243,232,253); color: var(--tc)">
         <div><span>39</span><span></span> </div>
         <div style="margin-top: auto; width: 100%; text-align: center;"><span id="chemEle">Y</span><br><span style="font-size: 10px;">Yttrium</span></div>
     </div>
     
-    <div class="chem" style="background-color: rgb(255,230,212);">
+    <div class="chem" style="background-color: rgb(255,230,212); color: var(--tc)">
         <div><span>92</span><span></span> </div>
         <div style="margin-top: auto; width: 100%; text-align: center;"><span id="chemEle">U</span><br><span style="font-size: 10px;">Uranium</span></div>
     </div>
     
-    <div class="chem" style="background-color: rgb(214,249,232);">
+    <div class="chem" style="background-color: rgb(214,249,232); color: var(--tc)">
         <div><span>49</span><span></span> </div>
         <div style="margin-top: auto; width: 100%; text-align: center;"><span id="chemEle">In</span><br><span style="font-size: 10px;">Indium</span></div>
     </div>
@@ -602,6 +609,17 @@ backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);  position: fixed
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" ></script>
 <script>
+function themeTogg(){
+    if (document.documentElement.style.getPropertyValue('--tc')==='white'){
+        document.documentElement.style.setProperty('--tc', 'black');
+        document.documentElement.style.setProperty('--bc', 'white');
+    }
+    else{
+        document.documentElement.style.setProperty('--tc', 'white');
+        document.documentElement.style.setProperty('--bc', 'black');
+    }
+}
+
 const swiper = new Swiper('.swiper', {
 slidesPerView: 1,
   loop: false,   
