--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     &copy; Lingyu Zhou 2024
 
     <p style="line-height: 150%; width: fit-content;" >
-        <a style="color: grey" href="javascript: navigator.share({title:'Lingyu Zhou',text:`Lingyu Zhou's Homepage`,url:'https://xolyn.github.io'});">Share</a>
+        <a style="color: grey" href="javascript: void(0)" onclick="navigator.share({title:'Lingyu Zhou',text:`Lingyu Zhou's Homepage`,url:'https://xolyn.github.io'});">Share</a>
         <br>
         <a href="mailto:report@zly.vg" style="color: grey">Report questions</a>
         <br>
