--- a/fontcss.html
+++ b/fontcss.html
@@ -640,6 +640,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend tag='inter korea kr' id="var">pretendard</legend>
             <div style="font-family:pretendard;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend tag='runway' id="var">abc</legend>
+            <div style="font-family:abc;" class="usrtxt" contenteditable ></div>
+        </fieldset>
         
 
     </div>
